<?xml version="1.0"?>
<package format="2">
    <name>ros_circuitpython_servokit_msgs</name>
    <version>1.0.0</version>
    <description>
        ros_circuitpython_servokit_msgs defines messages for <a href="https://github.com/Drone-FYP2021-PolyU-EIE/ROS_CircuitPython_ServoKit">ROS_CircuitPython_ServoKit_node</a>.
    </description>

    <maintainer email="tszman.chong@connect.polyu.hk">Tsz Man, CHONG</maintainer>
    <author email="tszman.chong@connect.polyu.hk">Tsz Man, CHONG</author>

    <license>MIT</license>

    <url type="website">https://github.com/Drone-FYP2021-PolyU-EIE/ROS_CircuitPython_ServoKit</url>
    <url type="repository">https://github.com/Drone-FYP2021-PolyU-EIE/ROS_CircuitPython_ServoKitgit</url>
    <url type="bugtracker">https://github.com/Drone-FYP2021-PolyU-EIE/ROS_CircuitPython_ServoKit/issues</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <depend>std_msgs</depend>

    <export>
        <architecture_independent/>
    </export>
</package>